[tool.poetry]
name = "job-search"
version = "0.1.0"
description = ""
authors = ["evgeniy <evgeniy.igorevich9402@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
django = "4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
